--- a/storix-fe/src/styles/globals.css
+++ b/storix-fe/src/styles/globals.css
@@ -103,10 +103,25 @@ body {
   }
 
   /*------ iPhone16 Container ------*/
-  .ipone16-container {
-    aspect-ratio: 9 / 19.5;
-    width: 100%;
-    max-width: 20rem;
+  .ipone16-container,
+  .iphone16-container {
+    aspect-ratio: 393 / 852;
+    width: min(100%, 393px);
+    height: max(100%, 852px);
     margin: 16px;
+    border: 1px solid;
+    background-color: var(--color-white);
+    border-color: var(--color-gray-200);
+    overflow: hidden;
+  }
+
+  /* 스크롤은 되지만 스크롤바는 안 보이게 하는 공용 클래스 */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE, Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
   }
 }
