--- a/storix-fe/src/styles/globals.css
+++ b/storix-fe/src/styles/globals.css
@@ -1,6 +1,16 @@
 /* src\styles\globals.css */
 @import 'tailwindcss';
 
+/* 스크롤바 숨김 */
+* {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
 /* ---------------------------------------------------
    Color 
 --------------------------------------------------- */
