--- a/storix-fe/src/styles/globals.css
+++ b/storix-fe/src/styles/globals.css
@@ -7,15 +7,6 @@
   --font-weight-bold: 700;
   --font-weight-medium: 500;
   --font-weight-extrabold: 800;
-
-  --fs-heading-1: 24px;
-  --fs-heading-2: 20px;
-  --fs-body-1: 16px;
-  --fs-body-2: 14px;
-  --fs-caption-1: 12px;
-  --fs-caption-2: 10px;
-  --fs-caption-3: 10px;
-
   --line-height-tight: 140%;
 }
 
@@ -58,46 +49,59 @@ body {
   line-height: var(--line-height-tight);
 }
 
+/* 
+ --font-weight-bold: 700;
+  --font-weight-medium: 500;
+  --font-weight-extrabold: 800;
+
+  --fs-heading-1: 24px;
+  --fs-heading-2: 20px;
+  --fs-body-1: 16px;
+  --fs-body-2: 14px;
+  --fs-caption-1: 12px;
+  --fs-caption-2: 10px;
+  --fs-caption-3: 10px;
+*/
 @layer utilities {
   /*------ Typography scale -------*/
   .heading-1 {
-    font-size: var(--fs-heading-1);
+    font-size: 24px;
     font-weight: var(--font-weight-bold);
     line-height: var(--line-height-tight);
   }
 
   .heading-2 {
-    font-size: var(--fs-heading-2);
+    font-size: 20px;
     font-weight: var(--font-weight-bold);
     line-height: var(--line-height-tight);
   }
 
   .body-1 {
-    font-size: var(--fs-body-1);
+    font-size: 16px;
     font-weight: var(--font-weight-medium);
     line-height: var(--line-height-tight);
   }
 
   .body-2 {
-    font-size: var(--fs-body-2);
+    font-size: 14px;
     font-weight: var(--font-weight-medium);
     line-height: var(--line-height-tight);
   }
 
   .caption-1 {
-    font-size: var(--fs-caption-1);
+    font-size: 12px;
     font-weight: var(--font-weight-medium);
     line-height: var(--line-height-tight);
   }
 
   .caption-2 {
-    font-size: var(--fs-caption-2);
+    font-size: 10px;
     font-weight: var(--font-weight-medium);
     line-height: var(--line-height-tight);
   }
 
   .caption-3 {
-    font-size: var(--fs-caption-3);
+    font-size: 10px;
     font-weight: var(--font-weight-extrabold);
     line-height: var(--line-height-tight);
   }
@@ -123,5 +127,10 @@ body {
 
   .no-scrollbar::-webkit-scrollbar {
     display: none; /* Chrome, Safari, Opera */
+  }
+
+  /*-----border-bottom------*/
+  .border-bottom {
+    border-bottom: 1px solid var(--color-gray-100);
   }
 }
