--- a/storix-fe/src/styles/globals.css
+++ b/storix-fe/src/styles/globals.css
@@ -5,9 +5,10 @@
   /* Typography */
   --font-family-sans:
     var(--font-geist-sans), 'Inter', 'Helvetica Neue', Arial, sans-serif;
-  --font-weight-bold: 700;
-  --font-weight-medium: 500;
   --font-weight-extrabold: 800;
+  --font-weight-bold: 700;
+  --font-weight-semibold: 600;
+  --font-weight-medium: 500;
   --line-height-tight: 140%;
 }
 
@@ -92,6 +93,16 @@ body {
   .heading-2 {
     font-size: 20px;
     font-weight: var(--font-weight-bold);
+    line-height: var(--line-height-tight);
+  }
+  .heading-3 {
+    font-size: 18px;
+    font-weight: var(--font-weight-semibold);
+    line-height: var(--line-height-tight);
+  }
+  .heading-4 {
+    font-size: 16px;
+    font-weight: var(--font-weight-semibold);
     line-height: var(--line-height-tight);
   }
 
