--- a/storix-fe/src/styles/globals.css
+++ b/storix-fe/src/styles/globals.css
@@ -79,7 +79,6 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
@@ -92,6 +91,12 @@ body {
 
   .heading-2 {
     font-size: 20px;
+    font-weight: var(--font-weight-bold);
+    line-height: var(--line-height-tight);
+  }
+
+  .heading-3 {
+    font-size: 18px;
     font-weight: var(--font-weight-bold);
     line-height: var(--line-height-tight);
   }
@@ -123,6 +128,12 @@ body {
   .caption-3 {
     font-size: 10px;
     font-weight: var(--font-weight-extrabold);
+    line-height: var(--line-height-tight);
+  }
+
+  .caption-4 {
+    font-size: 12px;
+    font-weight: var(--font-weight-bold);
     line-height: var(--line-height-tight);
   }
 
