--- a/storix-fe/src/styles/globals.css
+++ b/storix-fe/src/styles/globals.css
@@ -142,6 +142,13 @@ body {
     line-height: var(--line-height-tight);
   }
 
+  .date-text {
+    font-size: 16px;
+    font-weight: var(--font-weight-bold);
+    line-height: var(--line-height-tight);
+    color: var(--color-gray-500);
+  }
+
   /*------ iPhone16 Container ------*/
   .ipone16-container,
   .iphone16-container {
